@@ -1,30 +1,32 @@
-etc/indimail/control /etc/indimail
-usr/share/man /usr/share
-usr/share/man/man1 /usr/share/man
-usr/share/man/man8 /usr/share/man
-usr/bin/sendmail /usr/bin
-usr/bin/qmail-inject /usr/bin
-usr/bin/irmail /usr/bin
-usr/sbin/qmail-qmqpc /usr/sbin
-usr/bin/forward /usr/bin
-usr/bin/predate /usr/bin
-usr/bin/datemail /usr/bin
-usr/bin/mailsubj /usr/bin
-usr/bin/qmail-showctl /usr/bin
-usr/bin/qmaildirmake /usr/bin
-usr/bin/maildir2mbox /usr/bin
-usr/bin/maildirwatch /usr/bin
-usr/share/man/man1/forward.1.gz /usr/share/man/man1
-usr/share/man/man1/predate.1.gz /usr/share/man/man1
-usr/share/man/man1/datemail.1.gz /usr/share/man/man1
-usr/share/man/man1/mailsubj.1.gz /usr/share/man/man1
-usr/share/man/man1/qmaildirmake.1.gz /usr/share/man/man1
-usr/share/man/man1/maildir2mbox.1.gz /usr/share/man/man1
-usr/share/man/man1/maildirwatch.1.gz /usr/share/man/man1
-usr/share/man/man5/qmail-srs.5.gz /usr/share/man/man5
+var/indimail/bin                      /var/indimail
+var/indimail/sbin                     /var/indimail
+var/indimail/control                  /var/indimail
+var/indimail/libexec                  /var/indimail
+var/indimail/users                    /var/indimail
+indimail-mini/control                 /etc/indimail
+usr/bin/sendmail                      /usr/bin
+usr/bin/qmail-inject                  /usr/bin
+usr/bin/irmail                        /usr/bin
+usr/sbin/qmail-qmqpc                  /usr/sbin
+usr/bin/forward                       /usr/bin
+usr/bin/predate                       /usr/bin
+usr/bin/datemail                      /usr/bin
+usr/bin/mailsubj                      /usr/bin
+usr/bin/qmail-showctl                 /usr/bin
+usr/bin/qmaildirmake                  /usr/bin
+usr/bin/maildir2mbox                  /usr/bin
+usr/bin/maildirwatch                  /usr/bin
+usr/share/man/man1/forward.1.gz       /usr/share/man/man1
+usr/share/man/man1/predate.1.gz       /usr/share/man/man1
+usr/share/man/man1/datemail.1.gz      /usr/share/man/man1
+usr/share/man/man1/mailsubj.1.gz      /usr/share/man/man1
+usr/share/man/man1/qmaildirmake.1.gz  /usr/share/man/man1
+usr/share/man/man1/maildir2mbox.1.gz  /usr/share/man/man1
+usr/share/man/man1/maildirwatch.1.gz  /usr/share/man/man1
+usr/share/man/man5/qmail-srs.5.gz     /usr/share/man/man5
 usr/share/man/man8/qmail-showctl.8.gz /usr/share/man/man8
-usr/share/man/man8/qmail-inject.8.gz /usr/share/man/man8
-usr/share/man/man8/isendmail.8.gz /usr/share/man/man8
-usr/share/man/man8/isendmail.8.gz /usr/share/man/man8
-usr/share/man/man8/qmail-qmqpc.8.gz /usr/share/man/man8
-
+usr/share/man/man8/qmail-inject.8.gz  /usr/share/man/man8
+usr/share/man/man8/isendmail.8.gz     /usr/share/man/man8
+usr/share/man/man8/irmail.8.gz        /usr/share/man/man8
+usr/share/man/man8/qmail-qmqpc.8.gz   /usr/share/man/man8
+usr/share/indimail/doc/INSTALL-MINI   /usr/share/indimail/doc
