@@ -1,6 +1,6 @@
 #
 #
-# $Id: indimail-mta.spec.in,v 1.302 2021-04-07 18:53:00+05:30 Cprogrammer Exp mbhangui $
+# $Id: indimail-mta.spec.in,v 1.303 2021-04-29 12:03:42+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
 
@@ -789,6 +789,7 @@ echo ../resolv.conf 1>&3
                                    %{qmaildir}/sbin
                                    %{qmaildir}/users
                                    %{qmaildir}/control
+                                   %{qmaildir}/libexec
 %dir %attr(2775,indimail,qmail)    %{qsysconfdir}/control
 %dir %attr(2775,indimail,qmail)    %{qsysconfdir}/users
 %if "%{mandir}" != "/usr/share/man"
